[gd_scene load_steps=20 format=3 uid="uid://ckiwjx5flnngx"]

[ext_resource type="Script" uid="uid://pv7pyvaiuefo" path="res://Scenes/game.gd" id="1_3dryh"]
[ext_resource type="Texture2D" uid="uid://dlw5ydmvp501p" path="res://assets/rock.png" id="1_ebmjs"]
[ext_resource type="Texture2D" uid="uid://b3pr34676nq2y" path="res://assets/paper.png" id="1_wrm1d"]
[ext_resource type="Texture2D" uid="uid://cv1mtw6wqwyla" path="res://assets/scissor.png" id="3_3dryh"]
[ext_resource type="Texture2D" uid="uid://dnfxuwe3joahy" path="res://assets/rock (1).png" id="5_wowpa"]
[ext_resource type="Shader" uid="uid://btlina3dq7a3j" path="res://Scenes/scrollbg.gdshader" id="6_1l0tm"]
[ext_resource type="Texture2D" uid="uid://du4l3t051ld2c" path="res://assets/New Piskel.png" id="7_v158k"]
[ext_resource type="Script" uid="uid://dehweukeoq2uh" path="res://Scenes/camera_2d.gd" id="8_v158k"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h4fw4"]
shader = ExtResource("6_1l0tm")

[sub_resource type="AtlasTexture" id="AtlasTexture_wowpa"]
atlas = ExtResource("1_wrm1d")
region = Rect2(0, 0, 341, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxrlw"]
atlas = ExtResource("1_ebmjs")
region = Rect2(0, 0, 365, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6g32"]
atlas = ExtResource("3_3dryh")
region = Rect2(0, 0, 341, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_2poj3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wowpa")
}],
"loop": false,
"name": &"paper",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxrlw")
}],
"loop": false,
"name": &"rock",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6g32")
}],
"loop": false,
"name": &"scissor",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_v158k"]
atlas = ExtResource("1_wrm1d")
region = Rect2(0, 0, 341, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4fw4"]
atlas = ExtResource("1_ebmjs")
region = Rect2(0, 0, 365, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldgsr"]
atlas = ExtResource("3_3dryh")
region = Rect2(0, 0, 341, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_1l0tm"]
atlas = ExtResource("5_wowpa")
region = Rect2(0, 0, 365, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_v158k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v158k")
}],
"loop": false,
"name": &"paper",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4fw4")
}],
"loop": false,
"name": &"rock",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldgsr")
}],
"loop": false,
"name": &"scissor",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1l0tm")
}],
"loop": false,
"name": &"unknown",
"speed": 5.0
}]

[sub_resource type="GDScript" id="GDScript_v158k"]
script/source = "extends CanvasLayer



	
"

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3dryh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.117647, 0, 0, 1)

[node name="pattern" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_h4fw4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_v158k")

[node name="HSeparator" type="HSeparator" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="questionMark" type="Label" parent="CanvasLayer"]
modulate = Color(1, 0, 0, 1)
z_index = 2
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.355556
theme_override_font_sizes/font_size = 50
text = "‚ùì"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="impact_lbl" type="Label" parent="CanvasLayer"]
z_index = 2
anchors_preset = -1
anchor_top = 0.533333
anchor_right = 1.0
anchor_bottom = 0.888889
theme_override_font_sizes/font_size = 70
text = "üí•"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="player_r" type="AnimatedSprite2D" parent="CanvasLayer/HBoxContainer"]
z_index = 1
position = Vector2(67.6858, -26.5)
scale = Vector2(0.264735, 0.267578)
sprite_frames = SubResource("SpriteFrames_2poj3")
animation = &"rock"
flip_h = true

[node name="player_l" type="AnimatedSprite2D" parent="CanvasLayer/HBoxContainer"]
z_index = 1
position = Vector2(-28.5938, -26.5)
scale = Vector2(0.25976, 0.267578)
sprite_frames = SubResource("SpriteFrames_2poj3")
animation = &"rock"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="enemy_r" type="AnimatedSprite2D" parent="CanvasLayer/HBoxContainer2"]
z_index = 1
position = Vector2(-29.7969, 66.8548)
scale = Vector2(0.253168, 0.266192)
sprite_frames = SubResource("SpriteFrames_v158k")
animation = &"unknown"
flip_v = true

[node name="enemy_l" type="AnimatedSprite2D" parent="CanvasLayer/HBoxContainer2"]
z_index = 1
position = Vector2(68.7361, 66.4778)
scale = Vector2(0.25898, 0.267665)
sprite_frames = SubResource("SpriteFrames_v158k")
animation = &"unknown"
flip_h = true
flip_v = true

[node name="switch_l_btn" type="Button" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 192.0
offset_right = 142.0
offset_bottom = 240.0
text = "‚óÄÔ∏è"

[node name="switch_r_btn" type="Button" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 192.0
offset_right = 358.0
offset_bottom = 240.0
text = "‚ñ∂Ô∏è"

[node name="done_btn" type="Button" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 210.0
offset_right = 438.0
offset_bottom = 241.0
text = "DONE‚ùå"

[node name="Enemy_name_lbl" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 53.0
offset_bottom = 29.0
text = "NAME"

[node name="Player_name_lbl" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 144.0
offset_right = 53.0
offset_bottom = 167.0
text = "NAME"

[node name="ask_remove_lbl" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.3125
anchor_top = 0.511111
anchor_right = 0.69375
anchor_bottom = 0.596296
offset_top = -1.52588e-05
text = "Which hand to remove?"
metadata/_edit_use_anchors_ = true

[node name="enemy_lives_lbl" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 30.0
offset_right = 116.0
offset_bottom = 53.0

[node name="player_lives_lbl" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 168.0
offset_right = 46.0
offset_bottom = 191.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("8_v158k")

[node name="end_game_layer" type="CanvasLayer" parent="."]
script = SubResource("GDScript_v158k")

[node name="ColorRect" type="ColorRect" parent="end_game_layer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.392157)

[node name="winner_lbl" type="Label" parent="end_game_layer"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.711111
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="rematch_btn" type="Button" parent="end_game_layer"]
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.711111
anchor_right = 0.6
anchor_bottom = 0.888889
text = "REMATCH‚ùå"

[node name="lobby_btn" type="Button" parent="end_game_layer"]
anchors_preset = -1
anchor_top = 0.888889
anchor_right = 0.3
anchor_bottom = 1.0037
text = "BACK TO MENU"

[connection signal="pressed" from="switch_l_btn" to="." method="_on_switch_l_btn_pressed"]
[connection signal="pressed" from="switch_r_btn" to="." method="_on_switch_r_btn_pressed"]
[connection signal="pressed" from="done_btn" to="." method="_on_done_btn_pressed"]
[connection signal="pressed" from="end_game_layer/rematch_btn" to="." method="_on_rematch_btn_pressed"]
[connection signal="pressed" from="end_game_layer/lobby_btn" to="." method="_on_lobby_btn_pressed"]
